Fix use of Class.newInstance()